--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "codepen-dark",
   "description": "Code pen inspired theme for react developers",
   "version": "0.0.1",
-  "publisher": "https://github.com/gau2107",
+  "publisher": "GauravSolanki",
   "engines": {
     "vscode": "^1.74.0"
   },
